--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "angular-mocks": "~1.2.18",
     "ngFx": "~1.1.0",
     "gsap": "~1.17.0",
-    "angular-animate": "~1.4.3"
+    "angular-animate": "~1.4.3",
+    "angular-ui-router": "~0.2.15",
+    "angular-material": "~0.10.0"
   },
   "resolutions": {
     "angular": "1.4.3",
